# gpdb

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: svg_guidelines.md
gpdb_admin/: README.md  pyproject.toml
gpdb_admin/src/gpdb/admin/: __init__.py  auth.py  config.py  context.py  entry.py  graph_content.py  instances.py  runtime.py  secrets.py  servers.py  store.py
gpdb_admin/src/gpdb/admin/graph_content/: __init__.py  _helpers.py  edges.py  exceptions.py  graphs.py  instances.py  models.py  nodes.py  schemas.py
gpdb_admin/src/gpdb/admin/store/: __init__.py  api_keys.py  exceptions.py  graphs.py  instances.py  models.py  users.py
gpdb_admin/src/gpdb/admin/tools/: __init__.py  api_keys.py  base.py  graph.py  graph_params.py  graph_tools.py
gpdb_admin/src/gpdb/admin/web/: __init__.py  app.py
gpdb_admin/src/gpdb/admin/web/routes/: __init__.py  common.py  graph_edges.py  graph_nodes.py  graph_overview.py  graph_schemas.py  graph_viewer.py  list_filters.py  pages.py
gpdb_admin/src/gpdb/admin/web/routes/pages/: __init__.py  api_keys.py  auth.py  graphs.py  instances.py  validators.py
gpdb_admin/src/gpdb/admin/web/static/css/: app.css  jsonjoy-builder.css  jsonjoy-theme-fix.css  tokens.css
gpdb_admin/src/gpdb/admin/web/static/js/: graph-viewer.js  jedison-form.js  jedison.umd.js  jsonjoy-wrapper.js  svg-icon-slot.js  theme.js  ui.js
gpdb_admin/src/gpdb/admin/web/templates/: base.html
gpdb_admin/src/gpdb/admin/web/templates/macros/: svg_icon_slot.html
gpdb_admin/src/gpdb/admin/web/templates/pages/: api_keys.html  edge_detail.html  edge_form.html  graph_edges.html  graph_form.html  graph_nodes.html  graph_overview.html  graph_schemas.html  graph_viewer.html  home.html  instance_form.html  login.html  node_detail.html  node_form.html  schema_detail.html  schema_form.html  setup.html
gpdb_admin/src/gpdb/admin/web/templates/partials/: filters_toggle_script.html  graph_selector.html  list_filter_fields_edge.html  list_filter_fields_node.html  list_filter_panel.html  nav_menu_content.html  profile_menu_content.html
gpdb_admin/tests/: conftest.py  test_admin.py  test_api_keys.py  test_auth.py  test_config.py  test_edges.py  test_embedded.py  test_graphs.py  test_instances.py  test_mountable.py  test_node_payloads.py  test_nodes.py  test_schemas.py  test_viewer.py
plans/: bulk_operation_procedure.md  fix_json_schema_integrity.md  fix_unfinished_bulk_migration.md  live_changes_view.md  move_to_short_ids.md  pydantic-models-for-tool-params.md  schema_multiple_inheritance.md  split_oversized_files.md  tweaks.md
scripts/: build_and_publish.py  requirements.txt
src/gpdb/: __init__.py  conversions.py  graph.py  graph_edges.py  graph_nodes.py  graph_schema_migrate.py  graph_schemas.py  odm.py  query_docs.py  schema_inheritance.py  svg_sanitizer.py
src/gpdb/admin/: entry.py
src/gpdb/models/: __init__.py  base.py  dto.py  factories.py  records.py
src/gpdb/schema/: __init__.py  inline.py  versioning.py
src/gpdb/search/: __init__.py  engine.py  parser.py  query.py
tests/: conftest.py  test_admin.py  test_e2e_schema_visuals.py  test_file_size_limits.py  test_graph.py  test_graph_schemas.py  test_graph_search.py  test_helpers.py  test_schema_deletion.py  test_schema_inheritance.py  test_schema_list.py  test_schema_migration.py  test_schema_semver.py  test_schema_validation.py  test_svg_sanitizer.py
tests/admin/: test_frontend_graph_viewer.py  test_graph_viewer.py
