[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpdb"
version = "0.1.0"
description = "Graph Pydantic DataBase - stores a graph of Pydantic objects in a Postgres database"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "whogben"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
admin = []
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pixeltable-pgserver>=0.1.0",
]

[project.scripts]
gpdb = "gpdb.admin.entry:main"

[project.urls]
Homepage = "https://github.com/whogben/gpdb"
Repository = "https://github.com/whogben/gpdb"
Issues = "https://github.com/whogben/gpdb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
